--- a/src/app/topNavBar/cart-drop-down/cart-drop-down.component.html
+++ b/src/app/topNavBar/cart-drop-down/cart-drop-down.component.html
@@ -1,34 +1,13 @@
 <div id="wrapper">
-  <p id="activateIcon">
-    <i class="fa fa-shopping-cart"></i>
-  </p>
+  <p id="activateIcon"><i class="fa fa-shopping-cart"></i></p>
 
   <div id="all-options">
-    <!-- <i (mouseleave)="slideStop(upbtn)" (mouseover)="slideUp(upbtn)" #upbtn class="fa fa-angle-up"></i> -->
     <ul class="optionsContainer sliderContainer">
-
-      <li>
-        <a>
-          <i class="fa fa-eye"></i>
-          <span>Show</span>
-          <!-- <span class="currencyFull">{{currency?.full}}</span> -->
+      <li *ngFor="let item of cart">
+        <a href="{{ item.link }}">
+          <i class="fa {{ item.icon }}"></i> <span>{{ item.item }}</span>
         </a>
       </li>
-
-      <li>
-        <a href="">
-          <i class="fa fa-save"></i>
-          <span>Save</span>
-        </a>
-      </li>
-      <li>
-        <a href="">
-          <i class="fa fa-trash"></i>
-          <span>Empty</span>
-        </a>
-      </li>
-
     </ul>
-    <!-- <i (mouseleave)="slideStop(downbtn)" (mouseover)="slideDown(downbtn)" #downbtn class="fa fa-angle-down"></i> -->
   </div>
 </div>
