--- a/src/app/topNavBar/p-nav/p-nav.component.html
+++ b/src/app/topNavBar/p-nav/p-nav.component.html
@@ -27,7 +27,7 @@
             <i class="sliderControls fa fa-angle-up"></i>
             <i class="sliderControls fa fa-angle-left"></i>
             <ul class="sliderContainer">
-              <li *ngFor="let seclvl of menu.pulldown">
+              <li *ngFor="let seclvl of menu.pull02">
                 <a href="{{ seclvl.link }}">{{ seclvl.item }}</a>
 
                 <div *ngIf="seclvl.childrens" class="third-lvl-menu">
@@ -47,7 +47,7 @@
           <div class="pullDownMeta">
             <i
               [style.visibility]="
-                menu.pulldown[0].childrens ? 'visible' : 'hidden'
+                menu.pull02[0].childrens ? 'visible' : 'hidden'
               "
               class="expandButton fa fa-plus-circle"
             ></i>
