--- a/src/app/p-footer/p-footer.component.css
+++ b/src/app/p-footer/p-footer.component.css
@@ -1,91 +1,84 @@
-#footer{
-    position: fixed;
-    bottom: -35px;
-    left: 0;
-    background: #E8FCFB;
-    color: #13D7D6;
-    font-weight: 400;
-    z-index: 99;
-    display: block;
-    width: 100%;
-    transition: .5s ease-out;
+#footer {
+  position: fixed;
+  bottom: -35px;
+  left: 0;
+  background: #e8fcfb;
+  color: #13d7d6;
+  font-weight: 400;
+  z-index: 99;
+  display: block;
+  width: 100%;
+  transition: 0.5s ease-out;
 }
-#footer.visible{
-    bottom: 0;
-}
-
-
-#footerNav{
-    display: flex;
-}
-#footerNav i.sliderControls:hover{
-    cursor: pointer;
-}
-#footerNav i.sliderControls{
-    margin: auto 0;
-    font-size: 30px;
+#footer.visible {
+  bottom: 0;
 }
 
-ul.sliderContainer{
-    overflow: hidden;
-    white-space: nowrap;
-    margin: 0 30px;
+#footerNav {
+  display: flex;
+  justify-content: center;
+}
+#footerNav i.sliderControls:hover {
+  cursor: pointer;
+}
+#footerNav i.sliderControls {
+  margin: auto 0;
+  font-size: 30px;
 }
 
-ul.sliderContainer li{
-    display: inline-block;
-    padding: 15px 35px;
+ul.sliderContainer {
+  overflow: hidden;
+  white-space: nowrap;
+  margin: 0 30px;
 }
 
-ul.sliderContainer li a{
-    color: #13D7D6;
+ul.sliderContainer li {
+  display: inline-block;
+  padding: 15px 35px;
 }
 
-
-
-
-
-
-#footerToggle{
-    position: absolute;
-    top: -25px;
-    left: calc(50% - 32px);
-    border: none;
-    z-index: 100;
-    background-color: #E8FCFB;
-    border-radius: 5px;
-}
-#footerToggle:focus{
-    outline: none;
-}
-#footerToggle:hover{
-    cursor: pointer;
-}
-#footerToggle i{
-    color: #13D7D6;
-    padding: 0px 25px;
-    font-size: 30px;
-    transition-delay: .5s;
-    transition: 1s ease-out;
+ul.sliderContainer li a {
+  color: #13d7d6;
 }
 
-#footer.visible #footerToggle i{
-    transform: rotateX(180deg);
+#footerToggle {
+  position: absolute;
+  top: -25px;
+  left: calc(50% - 32px);
+  border: none;
+  z-index: 100;
+  background-color: #e8fcfb;
+  border-radius: 5px;
+}
+#footerToggle:focus {
+  outline: none;
+}
+#footerToggle:hover {
+  cursor: pointer;
+}
+#footerToggle i {
+  color: #13d7d6;
+  padding: 0px 25px;
+  font-size: 30px;
+  transition-delay: 0.5s;
+  transition: 1s ease-out;
 }
 
-@media (min-width: 2100px){
-    #footer{
-        bottom: -50px;
-
-    }
-
-    #footerToggle{
-        top: -40px;
-        padding: 0 5px;
-    }
-
-    #footerToggle i{
-        font-size: 60px;
-    }
+#footer.visible #footerToggle i {
+  transform: rotateX(180deg);
 }
 
+@media (min-width: 2100px) {
+  #footer {
+    bottom: -50px;
+  }
+
+  #footerToggle {
+    top: -40px;
+    padding: 0 5px;
+  }
+
+  #footerToggle i {
+    font-size: 60px;
+  }
+}
