--- a/src/app/topNavBar/cart-drop-down/cart-drop-down.component.html
+++ b/src/app/topNavBar/cart-drop-down/cart-drop-down.component.html
@@ -5,7 +5,7 @@
     <ul class="optionsContainer sliderContainer">
       <li *ngFor="let item of cart">
         <a href="{{ item.link }}">
-          <i class="fa {{ item.icon }}"></i> <span>{{ item.item }}</span>
+          <i class="fas fa-xs {{ item.icon }}"></i> <span>{{ item.item }}</span>
         </a>
       </li>
     </ul>
