--- a/src/app/topNavBar/p-nav/p-nav.component.html
+++ b/src/app/topNavBar/p-nav/p-nav.component.html
@@ -6,7 +6,7 @@
   <div class="mainMenu">
     <div class="responsiveMenuHeader">
       <h4>Pharmachy Menu</h4>
-      <i class="fa fa-times-circle-o" aria-hidden="true"></i>
+      <i class="far fa-times-circle"></i>
     </div>
     <i [hidden]="visibleArrow" class="sliderControls fa fa-angle-left"></i>
     <i [hidden]="isDesktop" class="sliderControls fa fa-angle-up"></i>
