--- a/src/app/topNavBar/user-drop-down/user-drop-down.component.html
+++ b/src/app/topNavBar/user-drop-down/user-drop-down.component.html
@@ -6,7 +6,7 @@
     <ul class="optionsContainer sliderContainer">
       <li *ngFor="let item of userDropDown">
         <a href="item.link">
-          <i class="fa {{ item.icon }}"></i> <span>{{ item.item }}</span>
+          <i class="fas fa-xs {{ item.icon }}"></i> <span>{{ item.item }}</span>
         </a>
       </li>
     </ul>
